--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-final-form": "^6.5.3",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^1.1.5",
     "web-vitals": "^1.0.1"
