--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^1.1.5",
+    "react-slider": "^1.3.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
